--- a/shared/styles/base.css
+++ b/shared/styles/base.css
@@ -219,6 +219,10 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+body, body * {
+  transition: background-color 0.3s ease;
+}
+
 h1,
 h2,
 h3,
