--- a/shared/styles/DateInput.css
+++ b/shared/styles/DateInput.css
@@ -1,3 +1,14 @@
+:root {
+  --hoverBG: #62626265;
+  --disableB: #d1d5db;
+  --disableC: #66666692;
+}
+:root .dark {
+  --hoverBG: #ffffff0e;
+  --disableB: #374151;
+  --disableC: #c5c5c5aa;
+}
+
 .react-date-picker {
   display: inline-flex;
   position: relative;
@@ -13,8 +24,8 @@
 }
 
 .react-date-picker--disabled {
-  background-color: #f0f0f0;
-  color: #6d6d6d;
+  background-color: var(--disableB);
+  color: var(--disableC);
 }
 
 .react-date-picker__wrapper {
@@ -31,7 +42,7 @@
 }
 
 .react-date-picker__inputGroup__divider {
-  padding: 1px 0;
+  padding: 1px 5px;
   white-space: pre;
 }
 
@@ -84,17 +95,19 @@
   cursor: pointer;
 }
 
-.react-date-picker__button:enabled:hover .react-date-picker__button__icon,
-.react-date-picker__button:enabled:focus .react-date-picker__button__icon {
-  stroke: #0078d7;
-}
-
-.react-date-picker__button:disabled .react-date-picker__button__icon {
-  stroke: #6d6d6d;
-}
-
 .react-date-picker__button svg {
-  display: inherit;
+  width: 20px;
+  height: 20px;
+}
+
+.react-date-picker__button:enabled:hover svg,
+.react-date-picker__button:enabled:focus .react-date-picker__button__icon {
+  scale: 1.2;
+  transition: all ease-in-out;
+}
+
+.react-date-picker__button:disabled svg {
+  color: #374151;
 }
 
 .react-date-picker__calendar {
@@ -112,16 +125,14 @@
 }
 
 .react-calendar {
-  width: 350px;
-  max-width: 100%;
-  background: white;
+  width: 100%;
+  max-width: 512px;
+  background-color: var(--headerB);
   border: 1px solid #a0a096;
   font-family: "Arial", "Helvetica", sans-serif;
   line-height: 1.125em;
-}
-
-.dark .react-calendar {
-  background-color: #3b3b3b;
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 .react-calendar--doubleView {
@@ -169,25 +180,13 @@
 }
 
 .react-calendar__navigation button:disabled {
-  background-color: #f0f0f0;
-}
-.dark .react-calendar__navigation button:disabled {
-  background-color: #1c1a1a;
+  background-color: var(--disableB);
+  color: var(--disableC);
 }
 
 .react-calendar__navigation button:enabled:hover,
 .react-calendar__navigation button:enabled:focus {
-  background-color: #e6e6e6;
-}
-
-.dark .react-calendar__navigation button:enabled:hover,
-.dark .react-calendar__navigation button:enabled:focus {
-  background-color: #1a1919;
-}
-
-.dark .react-calendar__navigation button:enabled:hover,
-.dark .react-calendar__navigation button:enabled:focus {
-  background-color: #3b3b3b;
+  background-color: var(--hoverBG);
 }
 
 .react-calendar__month-view__weekdays {
@@ -237,8 +236,8 @@
 }
 
 .react-calendar__tile:disabled {
-  background-color: #f0f0f0;
-  color: #ababab;
+  background-color: var(--disableB);
+  color: var(--disableC);
 }
 
 .react-calendar__month-view__days__day--neighboringMonth:disabled,
@@ -249,31 +248,31 @@
 
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
-  background-color: #e6e6e6;
+  background-color: var(--hoverBG);
 }
 
 .dark .react-calendar__tile:enabled:hover,
 .dark .react-calendar__tile:enabled:focus {
-  background-color: #2c2828;
+  background-color: var(--hoverBG);
 }
 
 .react-calendar__tile--now {
-  background: #f4f4b1;
-  color: #1a1919;
+  background: var(--linkC);
+  color: #ffffff;
 }
 
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #ffffa9;
+  background: var(--hoverBG);
 }
 
 .react-calendar__tile--hasActive {
-  background: #76baff;
+  background: var(--linkC);
 }
 
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
-  background: #a9d4ff;
+  background-color: color-mix(in hsl, var(--linkC) 95%, #000000 5%);
 }
 
 .react-calendar__tile--active {
@@ -283,7 +282,7 @@
 
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #1087ff;
+  background-color: color-mix(in hsl, var(--linkC) 95%, #000000 5%);
 }
 
 .react-calendar--selectRange .react-calendar__tile--hover {
